[gd_scene load_steps=5 format=3 uid="uid://b1o1fl5rkafgy"]

[ext_resource type="Texture2D" uid="uid://sww75bqmn3mw" path="res://Assets/Desktop/audio_player.png" id="1_jalix"]
[ext_resource type="Script" path="res://Scenes/music_player.gd" id="1_x8244"]
[ext_resource type="AudioStream" uid="uid://7s7r78ee5nlx" path="res://Assets/Completed_audio/Detective_N_1.mp3" id="2_yfyll"]
[ext_resource type="AudioStream" uid="uid://bht58k0gb4hl7" path="res://Assets/Completed_audio/Detective_D_1.mp3" id="3_5rwi5"]

[node name="music_player_node" type="Node"]
script = ExtResource("1_x8244")

[node name="nurse_audio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_yfyll")

[node name="daughter_audio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_5rwi5")

[node name="music_player" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 824.0
offset_top = 406.0
offset_right = 1125.0
offset_bottom = 498.0
texture = ExtResource("1_jalix")
expand_mode = 1

[node name="stop_audio" type="Button" parent="music_player"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 111.0
offset_top = 58.0
offset_right = 132.0
offset_bottom = 84.0

[node name="pause_audio" type="Button" parent="music_player"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 168.0
offset_top = 58.0
offset_right = 182.0
offset_bottom = 84.0

[node name="play_audio" type="Button" parent="music_player"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 139.0
offset_top = 58.0
offset_right = 160.0
offset_bottom = 84.0

[node name="exit_music_player" type="Button" parent="music_player"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 277.0
offset_top = 5.0
offset_right = 295.0
offset_bottom = 22.0

[node name="audio_name" type="Label" parent="music_player"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 6.0
offset_top = 4.0
offset_right = 205.0
offset_bottom = 22.0
theme_override_font_sizes/font_size = 13
text = "Interview with human"

[node name="minutes" type="Label" parent="music_player"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 249.0
offset_top = 54.0
offset_right = 291.0
offset_bottom = 68.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "00:00:00"

[connection signal="pressed" from="music_player/stop_audio" to="." method="_on_stop_audio_pressed"]
[connection signal="pressed" from="music_player/pause_audio" to="." method="_on_pause_audio_pressed"]
[connection signal="pressed" from="music_player/play_audio" to="." method="_on_play_audio_pressed"]
[connection signal="pressed" from="music_player/exit_music_player" to="." method="_on_exit_music_player_pressed"]
